# libsvgandroid

./: .gitignore  ExampleSvgCanvas.java  Makefile.am  README.md  configure  configure.ac
libsvg/: Makefile.am  base64.c  svg.c  svg_ascii.c  svg_debug.h  svg_element.c  svg_filter.h  svg_group.c  svg_image.c  svg_parser.h  svg_pattern.c  svgint.h
src_jar/com/toolkits/libsvgandroid/: Filter.java  SvgRaster.java
src_jni/: Android.mk  Application.mk  config.h
src_jni/libsvg/: base64.c  strhmap_cc.cc  strhmap_cc.h  svg.c  svg.h  svg_element.c  svg_filter.c  svg_filter.h  svg_gradient.c  svg_group.c  svg_image.c  svg_parser.c  svg_parser_expat.c  svg_path.c  svg_style.c  svg_text.c  svg_transform.c  svgint.h
src_jni/libsvg-android/: svg-android-internal.h  svg-android.h  svg_android.c  svg_android_debug.h  svg_android_filter.c  svg_android_render.c  svg_android_render_helper.c  svg_android_state.c
