lib_LTLIBRARIES = libsvg_android.la

libsvg_android_la_CFLAGS = $(expat_CFLAGS) $(libjpeg_CFLAGS)

libsvg_android_la_SOURCES = \
strhmap_cc.cc \
strhmap_cc.h \
svg_ascii.c \
svg_ascii.h \
svg_attribute.c \
svg.c \
svg_color.c \
svg_debug.h \
svg_element.c \
svg_filter.c \
svg_filter.h \
svg_gradient.c \
svg_group.c \
svg.h \
svg_image.c \
svgint.h \
svg_length.c \
svg_paint.c \
svg_parser.c \
svg_parser_expat.c \
svg_parser.h \
svg_path.c \
svg_pattern.c \
svg_str.c \
svg_style.c \
svg_text.c \
svg_transform.c \
svg_version.h

libsvg_android_la_LDFLAGS = $(expat_LIBS) $(libjpeg_LIBS)
